--- a/examples/test.yaml
+++ b/examples/test.yaml
@@ -1,10 +1,11 @@
 description: A simple GET request
 request:
   method: GET
-  url: https://httpbin.org/{{method}}
+  url: https://httpbin.org/get
   query:
     foo: bar
     baz: qux
   headers:
     Content-Type: application/json
     Authorization: Bearer {{env "AUTH_TOKEN"}}
+    
