--- a/wercker.yml
+++ b/wercker.yml
@@ -4,18 +4,6 @@
 # Read more about containers on our dev center
 # http://devcenter.wercker.com/docs/containers/index.html
 box: golang
-# This is the build pipeline. Pipelines are the core of wercker
-# Read more about pipelines on our dev center
-# http://devcenter.wercker.com/docs/pipelines/index.html
-
-# You can also use services such as databases. Read more on our dev center:
-# http://devcenter.wercker.com/docs/services/index.html
-# services:
-    # - postgres
-    # http://devcenter.wercker.com/docs/services/postgresql.html
-
-    # - mongo
-    # http://devcenter.wercker.com/docs/services/mongodb.html
 build:
   # The steps that will be executed on build
   # Steps make up the actions in your pipeline
@@ -25,7 +13,11 @@ build:
     # Sets the go workspace and places you package
     # at the right place in the workspace tree
     - setup-go-workspace
-
+    - script:
+        name: install mitchellh/gox
+        code: |
+        go get -u -v github.com/mitchellh/gox
+        sudo -E env PATH=$GOPATH/bin:$PATH gox -build-toolchain
     # Gets the dependencies
     - script:
         name: go get
@@ -41,3 +33,5 @@ build:
         name: go test
         code: |
           go test ./...
+    - tcnksm/gox
+
