--- a/wercker.yml
+++ b/wercker.yml
@@ -17,7 +17,7 @@ build:
         name: install mitchellh/gox
         code: |
           go get -u -v github.com/mitchellh/gox
-          sudo -E env PATH=$GOPATH/bin:$PATH gox -build-toolchain
+          sudo gox -build-toolchain
     # Gets the dependencies
     - script:
         name: go get
