Refactor structure of project and fix code style errors

--- a/examples/env.yml
+++ b/examples/env.yml
@@ -1,7 +1,7 @@
 description: A simple request example that makes use of environment vars
 request:
   method: GET
-  url: https://httpbin.org/{{.method}}
+  url: https://httpbin.org/get
   headers:
     Content-Type: application/json
     Authorization: Bearer {{env "AUTH_TOKEN"}}
